Fixed Bug img collapsed

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,6 +1,5 @@
 * {
   margin: 0;
-  overflow-x: hidden;
   max-width: 100vw;
 }
 
